# pristine

./: .gitignore  404.html  README.md  TODO  index.html  installation.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy_mkdocs.yml
docs/: index.md  installation.md
docs/math/: bds_model.md  felsenstein.md  gtr_model.md  laplace.md  likelihood_profiler.md  molecular_clock.md  optimization.md  pristine_overview.md
docs/tutorials/: inference.md
examples/: example_01_carc.py  example_02_cdclock.py  example_03_fpa_gtr.py  example_04_fpa_dating.py  example_05_bds_constant.py  example_06_bds_multistate.py  example_07_bds_linear.py  example_08_bds_relaxed.py  example_09_confints_curvature.py  example_10_save_to_disk.py  example_11_HKY_JC69_GTR_models.py  example_12_QMA_relaxed_clock.py  run_all.py
installation/: index.html
math/: bds_model.html  felsenstein.html  gtr_model.html  laplace.html  likelihood_profiler.html  molecular_clock.html  optimization.html  pristine_overview.html
math/bds_model/: index.html
math/felsenstein/: index.html
math/gtr_model/: index.html
math/laplace/: index.html
math/likelihood_profiler/: index.html
math/molecular_clock/: index.html
math/optimization/: index.html
pristine/: bds_model.py  binarytree.py  distribution.py  edgelist.py  felsenstein.py  gtr.py  hessian_tools.py  io_tools.py  laplace_estimator.py  likelihood_profiler.py  molecularclock.py  optimize.py  parameter_tools.py  plot.py  qma.py  sequence.py  substitution_models.py
search/: search_index.json
tutorials/: inference.html
(+2 files in other folders)
